
Introduction
------------
Apache Solr is an open source enterprise search server based on the Apache Lucene Java
search library, with XML/HTTP and JSON APIs, hit highlighting, faceted search,
caching, replication, and a web administration interface.

See http://lucene.apache.org/solr for more information.

================= FullStory ================

* SOLR-8694: DistributedMap/Queue can create too many Watchers and some code simplification. (Scott Blum via Mark Miller)
* SOLR-8693: Improve ZkStateReader logging. (Scott Blum via Mark Miller)
* SOLR-8605: Regular expression queries starting with escaped forward slash caused an exception. (Scott Blum, yonik)
* Remove pathological error reporting. Don't serialize the entire clusterstate to log.
* SOLR-7090(unmerged): Cross node join - FullJoinQParserPlugin (Scott Blum)
* Disable flaky test (FullStory)
* Reduced the minimum length required for trailing wildcards on the surround query parser. (Bruce Johnson)
* add jolokia jars to solr war (Ian Rose)

==================  5.4.1 ==================

Bug Fixes
----------------------

* SOLR-8460: /analysis/field could throw exceptions for custom attributes. (David Smiley, Uwe Schindler)

* SOLR-8373: KerberosPlugin: Using multiple nodes on same machine leads clients to
  fetch TGT for every request (Ishan Chattopadhyaya via noble)

* SOLR-8059: &debug=results for distributed search when distrib.singlePass (sometimes activated
  automatically) could result in an NPE. (David Smiley, Markus Jelsma)

* SOLR-8422: When authentication enabled, requests fail if sent to a node that doesn't host
  the collection (noble)

* SOLR-7462: AIOOBE in RecordingJSONParser (Scott Dawson, noble)

* SOLR-8496: SolrIndexSearcher.getDocSet(List<Query>) incorrectly included deleted documents
  when all of the queries were uncached (or there was no filter cache).  This caused
  multi-select faceting (including the JSON Facet API) to include deleted doc counts