@@ -10,6 +10,8 @@ See http://lucene.apache.org/solr for more information.
 
 ================= FullStory ================
 
+* SOLR-8695: Ensure ZK watchers are not triggering our watch logic on connection events and
+  make this handling more consistent. (Scott Blum via Mark Miller)
 * SOLR-8694: DistributedMap/Queue can create too many Watchers and some code simplification. (Scott Blum via Mark Miller)
 * SOLR-8693: Improve ZkStateReader logging. (Scott Blum via Mark Miller)
 * SOLR-8605: Regular expression queries starting with escaped forward slash caused an exception. (Scott Blum, yonik)
